<resources>
    <string name="app_name">Rank My Resume</string>
    <string name="action_settings">Settings</string>
    <string name="textview">Image Ready!</string>
    <string name="textview1">Evaluating Skills...</string>
    <string name="textview2">Evaluating Experience...</string>
    <string name="textview3">Evaluating Etiquette...</string>
    <string name="hello_world">Hello</string>
    <string name="image_cd_camera">Content Description</string>
    <string name="button_camera">Scan A Resume</string>
    <string name="score1">0</string>
    <string name="score2">0</string>
    <string name="score3">0</string>
    <string name="total_score">0</string>

</resources>
